--- a/assets/privacy.html
+++ b/assets/privacy.html
@@ -14,7 +14,7 @@
       class="emphasis">19</em>부터 적용됩니다.</p>
     </br>
     <p class='lh6 bs4'><strong>제1조(개인정보의 처리
-      목적)<br/><br/><em class="emphasis">< 호산고 알리미 >('url없음'이하 '호산고 알리미')</em>은(는) 다음의 목적을 위하여 개인정보를
+      목적)<br/><br/><em class="emphasis">< 호산고 알리미 >('호산고 알리미')</em>은(는) 다음의 목적을 위하여 개인정보를
       처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며 이용 목적이 변경되는 경우에는 「개인정보 보호법」 제18조에 따라 별도의 동의를 받는 등
       필요한 조치를 이행할 예정입니다.</strong>
     </p>
